--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
+    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
     <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
          alt="Nicole Braida" class="profile-pic">
   </header>
@@ -24,7 +24,7 @@
       <li><a href="education.html">Education</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="experience.html">Professional Experience</a></li>
-      <li><a href="teaching.html">Teaching</a></li>
+      <li><a href="teaching and conferences.html">Teaching</a></li>
       <li><a href="publications.html">Publications</a></li>
       <li><a href="experience-abroad.html">Experience Abroad</a></li>
       <li><a href="skills.html">Software/Language Skills</a></li>
@@ -36,7 +36,8 @@
   <main>
     <section>
       <h3>Welcome</h3>
-      <p>Hello! I am Nicole Braida, an independent scholar in film and media. Explore the sections to learn more about my education, projects, professional experience, publications, and how to contact me.</p>
+      <p>Hi! I am Nicole Braida, an independent scholar in film and media and a specialist in the context of museums and cultural heritage.<br> 
+        Explore the sections to learn more about my education, projects, professional experience, publications, and how to contact me.</p>
     </section>
   </main>
 
