--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <section>
       <h3>Welcome</h3>
       <p>Hi! I am Nicole Braida, an independent scholar in film and media and a specialist in the context of museums and cultural heritage.<br> 
+        My research work focuses on interactive and immersive media, digital methods, and the history and circulation of the Super 8 film format. 
         Explore the sections to learn more about my education, projects, professional experience, publications, and how to contact me.</p>
     </section>
   </main>
