--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="education.html">Education</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="experience.html">Professional Experience</a></li>
-      <li><a href="teaching and conferences.html">Teaching</a></li>
+      <li><a href="teaching and talks.html">Teaching</a></li>
       <li><a href="publications.html">Publications</a></li>
       <li><a href="experience-abroad.html">Experience Abroad</a></li>
       <li><a href="skills.html">Software/Language Skills</a></li>
@@ -35,8 +35,8 @@
   <!-- Main content -->
   <main>
     <section>
-      <h3>Welcome</h3>
-      <p>Hi! I am Nicole Braida, an independent scholar in film and media and a specialist in the context of museums and cultural heritage.<br> 
+      <h3>Welcome!</h3>
+      <p>Hi, I am Nicole Braida, an independent scholar in film and media and a specialist in the context of museums and cultural heritage.<br> 
         My research work focuses on interactive and immersive media, digital methods, and the history and circulation of the Super 8 film format. 
         Explore the sections to learn more about my education, projects, professional experience, publications, and how to contact me.</p>
     </section>
@@ -44,7 +44,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Nicole Braida</p>
+    <p>&copy; 2025 Nicole Braida</p>
   </footer>
 
 </body>
