--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="projects.html">Projects</a></li>
       <li><a href="experience.html">Professional Experience</a></li>
       <li><a href="teaching and talks.html">Teaching</a></li>
-      <li><a href="publications.html">Publications</a></li>
+      <li><a href="talks-publications.html">Publications</a></li>
       <li><a href="experience-abroad.html">Experience Abroad</a></li>
       <li><a href="skills.html">Software/Language Skills</a></li>
       <li><a href="contact.html">Contact</a></li>
