--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
+    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
     <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
          alt="Nicole Braida" class="profile-pic">
   </header>
@@ -36,7 +36,7 @@
   <main>
     <section>
       <h3>PROFESSIONAL EXPERIENCE</h3>
-      <p><strong>Sep. 2024 - ongoing:</strong> IKON Digital Farm, Content Specialist - historical Research & Content creation</p>
+      <p><strong>Sep. 2024 - Aug. 2025:</strong> IKON Digital Farm, Content Specialist - historical Research, Content coordination for immersive/interactive Museums</p>
       <p><strong>Apr. 2021 - Aug. 2024:</strong> Gutenberg-University Mainz, Postdoctoral Research Fellow in Project DiCi-Hub (A Research Hub for Cinema Studies)</p>
       <p><strong>Sep. 2017 - Mar. 2021:</strong> Gutenberg-University Mainz, Research Fellow</p>
       <p><strong>Jun. 2016 - Jul. 2017:</strong> Gutenberg-University Mainz, Graduate Assistant (Prof. Dr. Alexandra Schneider)</p>
@@ -49,7 +49,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Nicole Braida</p>
+    <p>&copy; 2025 Nicole Braida</p>
   </footer>
 
 </body>
