--- a/projects.html
+++ b/projects.html
@@ -8,19 +8,61 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
-    <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
-         alt="Nicole Braida" class="profile-pic">
-  </header>
+<header>
+  <h1>Nicole Braida, Ph.D.</h1>
+  <h2>Independent Scholar in Film and Media & Content Specialist @IKON</h2>
+</header>
 
-  <!-- Navigation -->
-  <nav>
-    <h3>Navigation</h3>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="experience.html">Professional
+<nav>
+  <h3>Navigation</h3>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="experience.html">Professional Experience</a></li>
+    <li><a href="teaching.html">Teaching</a></li>
+    <li><a href="talks-publications.html">Publications</a></li>
+    <li><a href="experience-abroad.html">Experience Abroad</a></li>
+    <li><a href="skills.html">Software/Language Skills</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+<main>
+  <section>
+    <h3>HISTORICAL FILM DATA ANALYSIS PROJECTS</h3>
+
+    <div class="project-card">
+      <a href="technofilm.html">
+        <img src="projects_files/technofilm.png" alt="Technofilm Project">
+      </a>
+      <h4>Technofilm Project</h4>
+      <p>Analysis of historical film data exploring Technofilm practices and distribution patterns. Related publication: <em>[Add publication if needed]</em>.</p>
+    </div>
+
+    <div class="project-card">
+      <a href="italo_film_analysis.html">
+        <img src="projects_files/italo_film.png" alt="Italo Film Analysis Project">
+      </a>
+      <h4>Italo Film Analysis</h4>
+      <p>Distribution and circulation of Italian films on Super8 in Germany during the 70s and 80s. Related publication: <em>Italo-Film: The Circulation of Italian Films on Super8 in Germany</em>.</p>
+    </div>
+
+    <div class="project-card">
+      <a href="ufa_dataset_analysis.html">
+        <img src="projects_files/ufa_dataset.png" alt="UFA Dataset Analysis Project">
+      </a>
+      <h4>UFA Film Dataset Analysis</h4>
+      <p>Exploring the German UFA film distribution database with visualizations and data insights. Related publication: <em>From the Small Screen to the Big Screen: The Super8's Distribution of Sandokan TV series</em>.</p>
+    </div>
+
+  </section>
+</main>
+
+<footer>
+  <p>&copy; 2025 Nicole Braida</p>
+</footer>
+
+</body>
+</html>
+
