--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 
     <div class="project-card">
       <a href="ufa_dataset_analysis.html">
-        <img src="projects_files/ufa_dataset.png" alt="UFA Dataset Analysis Project">
+        <img src="projects_files/ufa_film.png" alt="UFA Dataset Analysis Project">
       </a>
       <h4>UFA Film Dataset Analysis</h4>
       <p>Exploring the German UFA film distribution database with visualizations and data insights. Related publication: <em>From the Small Screen to the Big Screen: The Super8's Distribution of Sandokan TV series</em>.</p>
