--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <header>
   <h1>Nicole Braida, Ph.D.</h1>
-  <h2>Independent Scholar in Film and Media & Content Specialist @IKON</h2>
+  <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage</h2>
 </header>
 
 <nav>
