--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
 
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
+    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
     <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
          alt="Nicole Braida" class="profile-pic">
   </header>
@@ -35,13 +35,13 @@
       <h3>SOFTWARE & LANGUAGE SKILLS</h3>
       <p><strong>Visualization software skills:</strong> Tableau Public, DataWrapper, KeplerGL</p>
       <p><strong>Programming and Markup languages:</strong> HTML5, CSS (basics)</p>
-      <p><strong>Data Analysis/Cleaning skills:</strong> OpenRefine, Excel, Googlesheets</p>
-      <p><strong>Foreign Languages:</strong> Italian (native), German (C1/C2), English (C2), Spanish (C1), French (B1/B2)</p>
+      <p><strong>Data Analysis/Cleaning skills:</strong> AI tools, Python, OpenRefine, Excel, Googlesheets</p>
+      <p><strong>Foreign Languages:</strong> Italian (native), German (fluent), English (fluent), Spanish (advanced), French (intermediate)</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Nicole Braida</p>
+    <p>&copy; 2025 Nicole Braida</p>
   </footer>
 
 </body>
