--- a/talks-publications.html
+++ b/talks-publications.html
@@ -34,6 +34,7 @@
     <section>
       <h3>UNIVERSITY CONFERENCE TALKS (Selection)</h3>
       <ul>
+        <li>“Visualizing the Shadow Economies of Super8 Reduction Prints” Filmbasematters: A Material Approach to Transnational Histories of Small-Gauge Film 2025 - Università Ca’Foscari, Venezia</li>
         <li>“Curating Super8’s reduction prints amateur collectors data” — Moving Forward, Looking Back, 2025, Viterbo</li>
         <li>“Risorse e metodi di visualizzazione dati per il cinema e i media” — Ricerche sulla network analysis e i media, 2024, Cagliari</li>
         <li>“The humanitarian treatment of actuality in participatory data-driven practices of humanitarian mapping” — NECS 2024, Izmir</li>
