--- a/talks-publications.html
+++ b/talks-publications.html
@@ -58,9 +58,10 @@
     <section>
       <h3>PUBLICATIONS</h3>
       <ul>
+        <li>Braida, N. (2025). "The Balkan Trail. Trieste é bella di notte" Film-critic. In Degrassi, Filigoi, Malni, Mascia (eds.) <em>Catalogo 55°Premio Sergio Amidei</em>, Milano: Mimesis.</li>
         <li>Braida, N., (2025). “From the Small Screen to the Big Screen: The Super8's Distribution of Sandokan TV series”. <em>Cinéma & Cie. Film and Media Studies Journal</em>, Milano University Press.</li>
         <li>Braida, N., Pirk F. (2025). “Teaching Small Gauge with Digital Methods”. In Dang, Olesen, Van der Heijden (eds.) <em>Doing Digital Film History: Concepts, Tools, Practices.</em> De Gruyter.</li>
-        <li>Braida, N., Pirk F. (2024). “Italo-Film: The Circulation of Italian Films on Super 8 in Germany in the ’70s and ’80s”. <em>L'avventura. International Journal of Italian Film and Media Landscapes.</em> Il Mulino.</li>
+        <li>Braida, N. (2024). “Italo-Film: The Circulation of Italian Films on Super 8 in Germany in the ’70s and ’80s”. <em>L'avventura. International Journal of Italian Film and Media Landscapes.</em> Il Mulino.</li>
         <li>Braida, N. (2024). „Finding Home“: Mediale Aneignungen von Flüchtlingsleben. In A. Strohmaier and E. Linseisen (eds.) <em>Deine Kamera ist eine App. Über Medienverflechtungen des Applizierens und Approprierens.</em> Meson Press.</li>
         <li>Braida N., (2023) "Il mormorio dei femminicidi. Visualizzare i dati sulla violenza di genere". In L. Fales and V.Vacca (eds.) <em>Altri Spazi. Politiche e pratiche di risignificazione tra digitale e materiale.</em> Verona: Ombre Corte.</li>
         <li>Braida N., (2022) <em>Migrating through the Web. Interactive Practices about Migration, Flight and Exile.</em> Bielefeld: Transcript.</li>
