--- a/talks-publications.html
+++ b/talks-publications.html
@@ -10,7 +10,7 @@
 
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
+    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
     <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
          alt="Nicole Braida" class="profile-pic">
   </header>
@@ -23,7 +23,7 @@
       <li><a href="projects.html">Projects</a></li>
       <li><a href="experience.html">Professional Experience</a></li>
       <li><a href="teaching.html">Teaching</a></li>
-      <li><a href="publications.html">Publications</a></li>
+      <li><a href="talks-publications.html">Publications</a></li>
       <li><a href="experience-abroad.html">Experience Abroad</a></li>
       <li><a href="skills.html">Software/Language Skills</a></li>
       <li><a href="contact.html">Contact</a></li>
