--- a/teaching.html
+++ b/teaching.html
@@ -10,7 +10,7 @@
 
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
-    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage @IKON</h2>
+    <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
     <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
          alt="Nicole Braida" class="profile-pic">
   </header>
