--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,12 @@
   <main>
     <section>
       <h3>CONTACT</h3>
-      <p>If you would like to get in touch, you can email me at: <strong>ni.braida@gmail.com</strong></p>
-      <p>Or connect via professional networks such as LinkedIn or GitHub.</p>
-      <p>You can also include a contact form later if you want interactive messages.</p>
+      <p>If you would like to get in touch, you can reach me at: 
+      <p>Email: <a href="mailto:ni.braida@gmail.com">ni.braida@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/nicole-braida/" target="_blank">linkedin.com/in/nicole-braida/</a></p>
+      <p>Instagram: <a href="https://www.instagram.com/nicolebraida/" target="_blank">instagram.com/nicolebraida</a></p>
+      <p>Academia.edu: <a href="https://independent.academia.edu/BraidaNicole" target="_blank">https://independent.academia.edu/BraidaNicole</a></p></p>
+      <p></p>
     </section>
   </main>
 
