--- a/education.html
+++ b/education.html
@@ -37,7 +37,7 @@
     <section>
       <h3>EDUCATION</h3>
 
-      <p><strong>2017</strong> - <em>Doctor of Philosophy</em> in Media Dramaturgy at Gutenberg-University of Mainz at Institute for Film, Theater and Empirical Cultural Studies. Candidate at Doctoral School "Configurations of Film" at Goethe University Frankfurt. Title of Dissertation: <em>Migrating through the Web. Interactive Practices about Migration</em>.</p>
+      <p><strong>2017-2021</strong> - <em>Doctor of Philosophy</em> in Media Dramaturgy at Gutenberg-University of Mainz at Institute for Film, Theater and Empirical Cultural Studies. Candidate at Doctoral School "Configurations of Film" at Goethe University Frankfurt. Title of Dissertation: <em>Migrating through the Web. Interactive Practices about Migration</em>.</p>
 
       <p><strong>2011-2013</strong> - <em>M.A.</em> in Film and Audiovisual Studies (International Master Program) from University of Udine (IT).<br>
       Title of Master Thesis: <em>Web Documentary. Documenting Reality in the Post-media Age</em>.</p>
