--- a/experience.html
+++ b/experience.html
@@ -33,19 +33,54 @@
   </nav>
 
   <!-- Main content -->
-  <main>
-    <section>
-      <h3>PROFESSIONAL EXPERIENCE</h3>
-      <p><strong>Sep. 2024 - Aug. 2025:</strong> IKON Digital Farm, Content Specialist - historical Research, Content coordination for immersive/interactive Museums</p>
-      <p><strong>Apr. 2021 - Aug. 2024:</strong> Gutenberg-University Mainz, Postdoctoral Research Fellow in Project DiCi-Hub (A Research Hub for Cinema Studies)</p>
-      <p><strong>Sep. 2017 - Mar. 2021:</strong> Gutenberg-University Mainz, Research Fellow</p>
-      <p><strong>Jun. 2016 - Jul. 2017:</strong> Gutenberg-University Mainz, Graduate Assistant (Prof. Dr. Alexandra Schneider)</p>
-      <p><strong>Feb. 2011 - 2017:</strong> Mediacritica.it - Film and media critic</p>
-      <p><strong>Nov. 2011 - Feb. 2012:</strong> Production Assistant - Documentary film: <em>PER MANO IGNOTA. Peteano- Una strage dimenticata</em></p>
-      <p><strong>Feb. 2011 - Jul. 2011:</strong> Production and Director Assistant - Documentary Film: <em>Giuseppe Penone. I solchi dell'uomo</em></p>
-      <p><strong>Nov. 2007 - Mar. 2010:</strong> Program Direction - Mondayscreen - Student Film retrospective</p>
-    </section>
-  </main>
+ <main>
+   <section id="professional">
+     <h3>PROFESSIONAL EXPERIENCE</h3>
+     <div class="experience-list">
+
+       <a href="exp-ikon.html" class="experience-card">
+         <h4>IKON Digital Farm, Content Specialist (Sep. 2024 - Aug. 2025)</h4>
+         <p>Historical Research, Content Coordination for immersive/interactive Museums</p>
+       </a>
+
+       <a href="exp-dicihub.html" class="experience-card">
+         <h4>Gutenberg-University Mainz, Postdoctoral Research Fellow (Apr. 2021 - Aug. 2024)</h4>
+         <p>Project DiCi-Hub (A Research Hub for Cinema Studies)</p>
+       </a>
+
+       <a href="exp-research-fellow.html" class="experience-card">
+         <h4>Gutenberg-University Mainz, Research Fellow (Sep. 2017 - Mar. 2021)</h4>
+         <p>Research in Media and Film Studies</p>
+       </a>
+
+       <a href="exp-graduate-assistant.html" class="experience-card">
+         <h4>Gutenberg-University Mainz, Graduate Assistant (Jun. 2016 - Jul. 2017)</h4>
+         <p>Assisting Prof. Dr. Alexandra Schneider</p>
+       </a>
+
+       <a href="exp-mediacritica.html" class="experience-card">
+         <h4>Mediacritica.it, Film and Media Critic (Feb. 2011 - 2017)</h4>
+       </a>
+
+       <a href="exp-per-mano-ignota.html" class="experience-card">
+         <h4>Production Assistant - Documentary Film (Nov. 2011 - Feb. 2012)</h4>
+         <p><em>PER MANO IGNOTA. Peteano- Una strage dimenticata</em></p>
+       </a>
+
+       <a href="exp-giuseppe-penone.html" class="experience-card">
+         <h4>Production and Director Assistant - Documentary Film (Feb. 2011 - Jul. 2011)</h4>
+         <p><em>Giuseppe Penone. I solchi dell'uomo</em></p>
+       </a>
+
+       <a href="exp-mondayscreen.html" class="experience-card">
+         <h4>Program Direction - Mondayscreen (Nov. 2007 - Mar. 2010)</h4>
+         <p>Student Film Retrospective</p>
+       </a>
+
+     </div>
+   </section>
+ </main>
+
 
   <!-- Footer -->
   <footer>
