--- a/exp-dichub.html
+++ b/exp-dichub.html
@@ -18,6 +18,10 @@
     <h3>Details</h3>
     <p>Research Hub for Cinema Studies (DiCi-Hub). Include projects, publications, and research focus here.</p>
   </section>
+  <div class="back-button">
+  <a href="experience.html">← Back to Professional Experience</a>
+</div>
+
 </main>
 
 <footer>
