--- a/exp-graduate-assistant.html
+++ b/exp-graduate-assistant.html
@@ -18,6 +18,9 @@
     <h3>Details</h3>
     <p>Assisting Prof. Dr. Alexandra Schneider. Describe responsibilities, teaching, and projects here.</p>
   </section>
+  <div class="back-button">
+   <a href="experience.html">← Back to Professional Experience</a>
+  </div>
 </main>
 
 <footer>
