--- a/exp-per-mano-ignota.html
+++ b/exp-per-mano-ignota.html
@@ -19,6 +19,9 @@
     <p><em>PER MANO IGNOTA. Peteano- Una strage dimenticata</em></p>
     <p>Include your tasks and responsibilities during the production.</p>
   </section>
+  <div class="back-button">
+   <a href="experience.html">← Back to Professional Experience</a>
+  </div>
 </main>
 
 <footer>
