--- a/exp-mediacritica.html
+++ b/exp-mediacritica.html
@@ -18,6 +18,9 @@
     <h3>Details</h3>
     <p>Describe your contributions as a critic, including types of reviews, articles, and media coverage.</p>
   </section>
+  <div class="back-button">
+   <a href="experience.html">← Back to Professional Experience</a>
+  </div>
 </main>
 
 <footer>
