--- a/exp-giuseppe-penone.html
+++ b/exp-giuseppe-penone.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<nav>
+  <h3>Navigation</h3>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="experience.html">Professional Experience</a></li>
+    <li><a href="teaching.html">Teaching</a></li>
+    <li><a href="talks-publications.html">Talks & Publications</a></li>
+    <li><a href="experience-abroad.html">Experience Abroad</a></li>
+    <li><a href="skills.html">Software/Language Skills</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
 <header>
   <h1>Production and Director Assistant</h1>
