--- a/education.html
+++ b/education.html
@@ -34,17 +34,29 @@
 
   <!-- Main content -->
   <main>
-    <section>
-      <h3>EDUCATION</h3>
+  <section>
+    <h3>EDUCATION</h3>
+    
+    <div class="edu-card">
+      <h4>Doctor of Philosophy (Ph.D.) in Media Dramaturgy</h4>
+      <p class="edu-meta">2017–2021 · Gutenberg-University of Mainz · Institute for Film, Theater and Empirical Cultural Studies</p>
+      <p class="edu-meta">Doctoral School "Configurations of Film", Goethe University Frankfurt</p>
+      <p><strong>Dissertation:</strong> <em>Migrating through the Web. Interactive Practices about Migration</em></p>
+    </div>
 
-      <p><strong>2017-2021</strong> - <em>Doctor of Philosophy</em> in Media Dramaturgy at Gutenberg-University of Mainz at Institute for Film, Theater and Empirical Cultural Studies. Candidate at Doctoral School "Configurations of Film" at Goethe University Frankfurt. Title of Dissertation: <em>Migrating through the Web. Interactive Practices about Migration</em>.</p>
+    <div class="edu-card">
+      <h4>M.A. in Film and Audiovisual Studies</h4>
+      <p class="edu-meta">2011–2013 · International Master Program, University of Udine (Italy)</p>
+      <p><strong>Thesis:</strong> <em>Web Documentary. Documenting Reality in the Post-media Age</em></p>
+    </div>
 
-      <p><strong>2011-2013</strong> - <em>M.A.</em> in Film and Audiovisual Studies (International Master Program) from University of Udine (IT).<br>
-      Title of Master Thesis: <em>Web Documentary. Documenting Reality in the Post-media Age</em>.</p>
+    <div class="edu-card">
+      <h4>B.A. in Archaeology</h4>
+      <p class="edu-meta">2005–2010 · University of Padua (Italy)</p>
+    </div>
+  </section>
+</main>
 
-      <p><strong>2005-2010</strong> - <em>B.A.</em> in Archaeology from University of Padua (IT).</p>
-    </section>
-  </main>
 
   <!-- Footer -->
   <footer>
