--- a/experience.html
+++ b/experience.html
@@ -39,41 +39,50 @@
      <div class="experience-list">
 
        <a href="exp-ikon.html" class="experience-card">
-         <h4>IKON Digital Farm, Content Specialist (Sep. 2024 - Aug. 2025)</h4>
+         <h3>Sep. 2024 - Aug. 2025 </h3>
+         <h4>IKON Digital Farm, Content Specialist</h4>
          <p>Historical Research, Content Coordination for immersive/interactive Museums</p>
        </a>
 
        <a href="exp-dicihub.html" class="experience-card">
-         <h4>Gutenberg-University Mainz, Postdoctoral Research Fellow (Apr. 2021 - Aug. 2024)</h4>
+         <h3>Apr. 2021 - Aug. 2024 </h3>
+         <h4>Gutenberg-University Mainz, Postdoctoral Research Fellow</h4>
          <p>Project DiCi-Hub (A Research Hub for Cinema Studies)</p>
        </a>
 
        <a href="exp-research-fellow.html" class="experience-card">
-         <h4>Gutenberg-University Mainz, Research Fellow (Sep. 2017 - Mar. 2021)</h4>
+         <h3>Sep. 2017 - Mar. 2021</h3>
+         <h4>Gutenberg-University Mainz, Research Fellow</h4>
          <p>Research in Media and Film Studies</p>
        </a>
 
        <a href="exp-graduate-assistant.html" class="experience-card">
-         <h4>Gutenberg-University Mainz, Graduate Assistant (Jun. 2016 - Jul. 2017)</h4>
+         <h3>Jun. 2016 - Jul. 2017</h3>
+         <h4>Gutenberg-University Mainz, Graduate Assistant</h4>
          <p>Assisting Prof. Dr. Alexandra Schneider</p>
        </a>
 
        <a href="exp-mediacritica.html" class="experience-card">
-         <h4>Mediacritica.it, Film and Media Critic (Feb. 2011 - 2017)</h4>
+         <h3>Feb. 2011 - 2017</h3>
+         <h4>Mediacritica.it, Film and Media Critic</h4>
+         <p>Author of film critiques</p>
        </a>
 
        <a href="exp-per-mano-ignota.html" class="experience-card">
-         <h4>Production Assistant - Documentary Film (Nov. 2011 - Feb. 2012)</h4>
-         <p><em>PER MANO IGNOTA. Peteano- Una strage dimenticata</em></p>
+         <h3>Nov. 2011 - Feb. 2012</h3>
+         <h4>Production Assistant - Documentary Film</h4>
+         <p><em>PER MANO IGNOTA. Peteano- Una strage dimenticata (Cristian Natoli, 2012)</em></p>
        </a>
 
        <a href="exp-giuseppe-penone.html" class="experience-card">
-         <h4>Production and Director Assistant - Documentary Film (Feb. 2011 - Jul. 2011)</h4>
-         <p><em>Giuseppe Penone. I solchi dell'uomo</em></p>
+         <h3>Feb. 2011 - Jul. 2011</h3>
+         <h4> Assistant - Documentary Film</h4>
+         <p><em>Memoria dei fluidi (Giampaolo Penco, 2012)</em></p>
        </a>
 
        <a href="exp-mondayscreen.html" class="experience-card">
-         <h4>Program Direction - Mondayscreen (Nov. 2007 - Mar. 2010)</h4>
+         <h3>Nov. 2007 - Mar. 2010</h3>
+         <h4>Program Direction - Mondayscreen</h4>
          <p>Student Film Retrospective</p>
        </a>
 
