--- a/talks-publications.html
+++ b/talks-publications.html
@@ -36,26 +36,26 @@
       <ul>
         <h3>2025</h3>
         <li>“Visualizing the Shadow Economies of Super8 Reduction Prints” Filmbasematters: A Material Approach to Transnational Histories of Small-Gauge Film 2025 - Università Ca’Foscari, Venezia</li>
-        <li>“Curating Super8’s reduction prints amateur collectors data” — Moving Forward, Looking Back, 2025, Viterbo</li>
+        <li>“Curating Super8’s reduction prints amateur collectors data” — Moving Forward, Looking Back, 2025, Viterbo</li><br>
         <h3>2024</h3>
         <li>“Risorse e metodi di visualizzazione dati per il cinema e i media” — Ricerche sulla network analysis e i media, 2024, Cagliari</li>
-        <li>“The humanitarian treatment of actuality in participatory data-driven practices of humanitarian mapping” — NECS 2024, Izmir</li>
+        <li>“The humanitarian treatment of actuality in participatory data-driven practices of humanitarian mapping” — NECS 2024, Izmir</li><br>
         <h3>2023</h3>
-        <li>“Super8’s Institutional and Non-institutionals Networks of Care” — NECS 2023, Oslo</li>
+        <li>“Super8’s Institutional and Non-institutionals Networks of Care” — NECS 2023, Oslo</li><br>
         <h3>2022</h3>
         <li>“Teaching Small Gauge with Digital Methods” — Doing Digital Film History 2022, Marburg</li>
         <li>“Teaching Digital Methods in Film Studies” — NECS Workshop 2022, Bucarest</li>
-        <li>“Mapping Sandokan: The circulation of the italian TV series on Super8” — Conference 2022, Barcelona</li>
+        <li>“Mapping Sandokan: The circulation of the italian TV series on Super8” — Conference 2022, Barcelona</li><br>
         <h3>2021</h3>
         <li>“Understanding Interactive Practices through Migration” — NECS Workshop 2021, Palermo</li>
-        <li>“The Humanitarian Impulse in Interactive Maps and Data Visualization” — Visible Evidence 2021, Frankfurt</li>
+        <li>“The Humanitarian Impulse in Interactive Maps and Data Visualization” — Visible Evidence 2021, Frankfurt</li><br>
         <h3>2019</h3>
-        <li>“Call for (inter)action” — Playback 2019, Montréal</li>
+        <li>“Call for (inter)action” — Playback 2019, Montréal</li><br>
         <h3>2018</h3>
         <li>"Call for (Inter)Action: The Construction of Solidarity in Interactive Practices" — Digital Cultures Conference 2018, Lüneburg</li>
-        <li>"Get the Flow. Learning geopolitics through interactive maps" — MAGIS Spring School 2018, Gorizia</li>
+        <li>"Get the Flow. Learning geopolitics through interactive maps" — MAGIS Spring School 2018, Gorizia</li><br>
         <h3>2017</h3>
-        <li>"Economy of Web-based Interactive Practices" — GFM Tagung 2017, Erlangen</li>
+        <li>"Economy of Web-based Interactive Practices" — GFM Tagung 2017, Erlangen</li><br>
         <h3>2016</h3>
         <li>"What if I was a refugee? How game structures frame refugee issues" — PRAGUE MEDIA POINT 2016</li>
         <li>"Ephemeral media. The case of interactive documentary practices" — NECS 2016, Potsdam</li>
