--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,14 @@
   <section>
     <h3>HISTORICAL FILM DATA ANALYSIS PROJECTS</h3>
 
+      <div class="project-card">
+      <a href="Analysing and Visualising the Dataset of confiscated film lists (from ANICA files of 1978). Unpublished">
+        <img src="anica.png" alt="Super 8 Piracy">
+      </a>
+      <h4>Super 8 Film Piracy in Italy</h4>
+      <p>Analysis of a historical film dataset of confiscated films (ANICA files of 1978). Not published yet <em>[Add publication if needed]</em>.</p>
+    </div>
+    
     <div class="project-card">
       <a href="technofilm.html">
         <img src="projects_files/technofilm.png" alt="Technofilm Project">
