--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
       <div class="project-card">
       <a href="Analysing and Visualising the Dataset of confiscated film lists (from ANICA files of 1978). Unpublished">
-        <img src="anica.png" alt="Super 8 Piracy">
+        <img src="projects_files/anica.png" alt="Super 8 Piracy">
       </a>
       <h4>Super 8 Film Piracy in Italy</h4>
       <p>Analysis of a historical film dataset of confiscated films (ANICA files of 1978)<em>[Not published yet ]</em>.</p>
