--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <img src="projects_files/anica.png" alt="Super 8 Piracy">
       </a>
       <h4>Super 8 Film Piracy in Italy</h4>
-      <p>Analysis of a historical film dataset of confiscated films (ANICA files of 1978)<em>[Not published yet ]</em>.</p>
+      <p>Analysis of a historical film dataset of confiscated films (ANICA files of 1978)<em> [Not published yet]</em>.</p>
     </div>
     
     <div class="project-card">
@@ -45,7 +45,7 @@
         <img src="projects_files/technofilm.png" alt="Technofilm Project">
       </a>
       <h4>Technofilm Project</h4>
-      <p>Analysis of historical film data exploring Technofilm practices and distribution patterns. Related publication: <em></em>.</p>
+      <p>Analysis of historical film data exploring Technofilm practices and distribution patterns. <em></em>.</p>
     </div>
 
     <div class="project-card">
