--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,26 @@
   <main>
     <section>
       <h3>CONTACT</h3>
+      
       <p>If you would like to get in touch, you can reach me at: 
       <p>Email: <a href="mailto:ni.braida@gmail.com">ni.braida@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/nicole-braida/" target="_blank">linkedin.com/in/nicole-braida/</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/nicolebraida/" target="_blank">instagram.com/nicolebraida</a></p>
-      <p>Academia.edu: <a href="https://independent.academia.edu/BraidaNicole" target="_blank">https://independent.academia.edu/BraidaNicole</a></p></p>
-      <p></p>
-    </section>
+
+      <div class="social-icons" aria-label="Social links">
+    <a href="https://www.instagram.com/nicolebraida/" target="_blank" rel="noopener" aria-label="Instagram">
+      <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+    </a>
+
+    <a href="https://www.linkedin.com/in/nicole-braida/" target="_blank" rel="noopener" aria-label="LinkedIn">
+      <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+    </a>
+
+    <a href="https://independent.academia.edu/BraidaNicole" target="_blank" rel="noopener" aria-label="Academia">
+      <i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
+    </a>
+  </div>
+</section>
+      
+  
   </main>
 
   <footer>
