--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
         My research work focuses on interactive and immersive media, digital methods, and the history and circulation of the Super 8 film format. 
         Explore the sections to learn more about my education, projects, professional experience, publications, and how to contact me.</p>
     </section>
+
+    
+
+   <section id="news">
+     <h3>NEWS</h3>
+     <ul class="news-list">
+       <li>
+         <span class="news-date">15.09.2025</span>  
+         New article on <em>Super8 Reduction Prints</em> published in <a href="https://riviste.unimi.it/index.php/cinemaetcie/article/view/19977" target="_blank">Cinéma & Cie</a>.
+       </li>
+       <li>
+         <span class="news-date">10.07.2025</span>  
+         Invited talk at <em>Filmbasematters</em> conference in Venice.
+       </li>
+       <li>
+         <span class="news-date">20.06.2025</span>  
+         Updated Projects page with new visualization of UFA film dataset.
+       </li>
+     </ul>
+   </section>
+
+
   </main>
 
   <!-- Footer -->
