--- a/exp-dichub.html
+++ b/exp-dichub.html
@@ -30,7 +30,7 @@
 <main>
   <section>
     <h3>Details</h3>
-    <p>Research Hub for Cinema Studies (DiCi-Hub). Include projects, publications, and research focus here.</p>
+    <p>Research Hub for Cinema Studies (DiCi-Hub). In this project <a href="https://www.uni-marburg.de/en/fb09/institutes/media-studies/research/research-projects/dici-hub/project/project-description">Dicihub</a> I have worked as postdoctoral researcher supervising the collection, digitization and data structuration of Super8 film catalogues from the 70s and early 80s. I was also the project coordinator between 2022 and 2023. As a scientist at Dicihub I worked in an interdisciplinary team, organized workshops and public lectures, co-organized international conferences and curated the public dissemination of the project´s aims and findings.</p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
