--- a/exp-ikon.html
+++ b/exp-ikon.html
@@ -17,7 +17,7 @@
   <section>
     <h3>Details</h3>
     <p>Historical Research, Content Coordination for immersive/interactive Museums.</p>
-    <p>Add more information about projects, achievements, and responsibilities here.</p>
+    <p>As a Content Specialist at IKON, I did the multimedia editorial coordination of the Archeological Museum of Romans, curating also the communication with the scientific coordinator. I also developed scripts and itineraries, and coordinated the production of the multimedia exhibition "Gorithia. In the folds of time 1001-2025" for Fondazione Carigo, as well as for other projects, such as the Museo Ebraico di Trieste. </p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
