--- a/exp-graduate-assistant.html
+++ b/exp-graduate-assistant.html
@@ -16,7 +16,7 @@
 <main>
   <section>
     <h3>Details</h3>
-    <p>Assisting Prof. Dr. Alexandra Schneider. Describe responsibilities, teaching, and projects here.</p>
+    <p>As a Graduate Assistant at the Institute of Film, Theatre, Media and Cultural Studies at the University of Mainz, I was assisting in some organizational tasks Prof. Dr. Alexandra Schneider </p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
