--- a/exp-research-fellow.html
+++ b/exp-research-fellow.html
@@ -16,7 +16,7 @@
 <main>
   <section>
     <h3>Details</h3>
-    <p>Research in Media and Film Studies. Include key projects, collaborations, and responsibilities.</p>
+    <p>As a Researcher in the <a href="https://konfigurationen-des-films.de/en/about/"> Project "Configurations of Film" </a>, based at the Goethe University Frankfurt I was part of a research collective investigating the post-cinematic configurations of film. As a research fellow I co-organized workshops, public lectures, conferences, and presented my dissertation work at international conferences. My work has been focusing on interactive media practices about migration and was published in 2022 by Transcript as an OA publication <a href="https://www.transcript-verlag.de/978-3-8376-6039-5/migrating-through-the-web/?c=310000019">(go to)</a>. </p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
