--- a/exp-mediacritica.html
+++ b/exp-mediacritica.html
@@ -16,7 +16,7 @@
 <main>
   <section>
     <h3>Details</h3>
-    <p>Describe your contributions as a critic, including types of reviews, articles, and media coverage.</p>
+    <p>As an author for Mediacritica I wrote film reviews, articles, and did the media coverage for several film festivals such as Venice Film Festival, IDFA Amsterdam, Trieste Film Festival. All my articles (66) are retrievable online on the <a href="https://www.mediacritica.it/author/nicole-braida/"> Mediacritica website</a>. </p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
