--- a/experience.html
+++ b/experience.html
@@ -44,6 +44,12 @@
          <p>Historical Research, Content Coordination for immersive/interactive Museums</p>
        </a>
 
+       <a href="exp-udine.html" class="experience-card">
+         <h3>Oct. 2023 - Jan. 2025 </h3>
+         <h4>Università degli Studi di Udine, Lecturer</h4>
+         <p>Undergraduate Course on Data Visualization (SS2023/SS2024)</p>
+       </a>
+       
        <a href="exp-dicihub.html" class="experience-card">
          <h3>Apr. 2021 - Aug. 2024 </h3>
          <h4>Gutenberg-University Mainz, Postdoctoral Research Fellow</h4>
