--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
          <p>Undergraduate Course on Data Visualization (SS2023/SS2024)</p>
        </a>
        
-       <a href="exp-dicihub.html" class="experience-card">
+       <a href="exp-dichub.html" class="experience-card">
          <h3>Apr. 2021 - Aug. 2024 </h3>
          <h4>Gutenberg-University Mainz, Postdoctoral Research Fellow</h4>
          <p>Project DiCi-Hub (A Research Hub for Cinema Studies)</p>
