--- a/exp-mondayscreen.html
+++ b/exp-mondayscreen.html
@@ -16,7 +16,7 @@
 <main>
   <section>
     <h3>Details</h3>
-    <p>Describe your responsibilities and work organizing the student film retrospective.</p>
+    <p>As member of ASU (Associazione studenti universitari) I directed and co-organized for 3 years a series of film retrospectives for students of the University of Padua. We chose, presented and discussed films, we developed programs and did the fund raising, communication and advertisement for the screenings. </p>
   </section>
   <div class="back-button">
    <a href="experience.html">← Back to Professional Experience</a>
