--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
     <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
-    <img src="profile_pic.jpg"
+    <img src="profile_pic.jpeg"
          alt="Nicole Braida" class="profile-pic">
   </header>
 
