--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Nicole Braida, Ph.D.</h1>
     <h2>Independent Scholar in Film and Media & Content Specialist for Museums and Cultural Heritage </h2>
-    <img src="https://film-medien.ftmk.uni-mainz.de/files/2018/11/Kolleg_6-214x300.jpg"
+    <img src="profile-pic.jpeg"
          alt="Nicole Braida" class="profile-pic">
   </header>
 
